package in_myfiles.creational_pattern.abstract_factory

enum class FactoryType {
    CHINA, OPEN
}