package in_myfiles.creational_pattern.abstract_factory

interface HomeItem {
    fun showItem()
}